# project_sba

./: .gitignore  .mise.toml  README.md  git_howto.md  lambda_handler.py  main.py  plan.md  pyproject.toml
milestones/: README.md  milestone_0.md  milestone_1.md
plan/: 0_plan.md  1_plan.md  1_plan_database_connection.md  2_AWS.md  2_plan_state_machine.md  99_AWS.md
src/app/handlers/: egg.py
src/app/models/: whimling.py
tf/0_backend/: outputs.tf  provider.tf  variables.tf
tf/1_lambda/: main.tf  outputs.tf  variables.tf
