[project]
name = "project-sba"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = []

[dependency-groups]
dev = [
    "pyrefly>=0.62.0",
    "ruff>=0.15.11",
]

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    "tf",
    "task"
]
line-length = 150
indent-width = 4

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]

[tool.pyrefly]
project-excludes = [".venv/**", "tf/**", ".git/**", ".github/**", "build/**"]