[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Tell hatchling where our package lives (src/ layout)
# This makes `from app.models.whimling import Whimling` work after `uv sync`
[tool.hatch.build.targets.wheel]
packages = ["src/app"]

[project]
name = "project-sba"
version = "0.1.0"
description = "Project SBA — The Grimoire of a Living Creature. A mystical pet simulator for learning Python backend concepts."
requires-python = ">=3.14"
dependencies = [
    "pydantic>=2.13.4",
    "pymongo>=4.17.0",
]

[dependency-groups]
dev = [
    "pyrefly>=0.62.0",
    "ruff>=0.15.11",
]

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    "tf",
    "task",
    "milestones",
    "archive",
]
line-length = 150
indent-width = 4

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.pyrefly]
project-excludes = [".venv/**", "tf/**", ".git/**", ".github/**", "build/**", "milestones/**", "archive/**"]
